--- a/res/table.tmpl
+++ b/res/table.tmpl
@@ -5,7 +5,7 @@
 <!-- ###LIST_VIEW### begin -->
 <!-- ###HAS_NEW_ENTRY### begin -->###NEW_ENTRY###<!-- ###HAS_NEW_ENTRY### end -->
 <!-- ###HAS_YEAR_NAVI### begin -->###YEAR_NAVI###<!-- ###HAS_YEAR_NAVI### end -->
-<!-- ###HAS_PAGE_NAVI### begin -->###PAGE_NAVI###<!-- ###HAS_PAGE_NAVI### end -->
+<!-- ###HAS_PAGE_NAVI### begin -->###PAGE_NAVI_TOP###<!-- ###HAS_PAGE_NAVI### end -->
 <!-- ###HAS_ITEMS### begin -->
 <table cellspacing="0" cellpadding="0" border="0" class="tx_sevenpack-list">
 <tbody>
@@ -13,7 +13,7 @@
 </tbody>
 </table>
 <!-- ###HAS_ITEMS### end -->
-<!-- ###HAS_PAGE_NAVI### begin -->###PAGE_NAVI###<!-- ###HAS_PAGE_NAVI### end -->
+<!-- ###HAS_PAGE_NAVI### begin -->###PAGE_NAVI_BOTTOM###<!-- ###HAS_PAGE_NAVI### end -->
 <!-- ###HAS_STATISTIC### begin -->###STATISTIC###<!-- ###HAS_STATISTIC### end -->
 <!-- ###HAS_IMPORT### begin -->###IMPORT###<!-- ###HAS_IMPORT### end -->
 <!-- ###HAS_EXPORT### begin -->###EXPORT###<!-- ###HAS_EXPORT### end -->
