Default style changes - cleaner

--- a/res/table.tmpl
+++ b/res/table.tmpl
@@ -3,8 +3,12 @@
 <h1>List view section</h1>
 
 <!-- ###LIST_VIEW### begin -->
+<!-- ###HAS_NAVI### begin -->
+<div class="tx_sevenpack-top_navigation">
 <!-- ###HAS_NEW_ENTRY### begin -->###NEW_ENTRY###<!-- ###HAS_NEW_ENTRY### end -->
 <!-- ###HAS_YEAR_NAVI### begin -->###YEAR_NAVI###<!-- ###HAS_YEAR_NAVI### end -->
+</div>
+<!-- ###HAS_NAVI### end -->
 <!-- ###HAS_PAGE_NAVI### begin -->###PAGE_NAVI_TOP###<!-- ###HAS_PAGE_NAVI### end -->
 <!-- ###HAS_ITEMS### begin -->
 <table cellspacing="0" cellpadding="0" border="0" class="tx_sevenpack-list">
