Initial preferences bar code

--- a/res/table.tmpl
+++ b/res/table.tmpl
@@ -3,12 +3,13 @@
 <h1>List view section</h1>
 
 <!-- ###LIST_VIEW### begin -->
-<!-- ###HAS_NAVI### begin -->
+<!-- ###HAS_TOP_NAVI### begin -->
 <div class="tx_sevenpack-top_navigation">
 <!-- ###HAS_NEW_ENTRY### begin -->###NEW_ENTRY###<!-- ###HAS_NEW_ENTRY### end -->
-<!-- ###HAS_YEAR_NAVI### begin -->###YEAR_NAVI###<!-- ###HAS_YEAR_NAVI### end -->
+<!-- ###HAS_YEAR_NAVI### begin -->###YEAR_NAVI_TOP###<!-- ###HAS_YEAR_NAVI### end -->
+<!-- ###HAS_PREF_NAVI### begin -->###PREF_NAVI_TOP###<!-- ###HAS_PREF_NAVI### end -->
 </div>
-<!-- ###HAS_NAVI### end -->
+<!-- ###HAS_TOP_NAVI### end -->
 <!-- ###HAS_PAGE_NAVI### begin -->###PAGE_NAVI_TOP###<!-- ###HAS_PAGE_NAVI### end -->
 <!-- ###HAS_ITEMS### begin -->
 <table cellspacing="0" cellpadding="0" border="0" class="tx_sevenpack-list">
@@ -42,6 +43,11 @@
 <!-- ###PAGE_NAVI_BLOCK### begin -->
 <div class="tx_sevenpack-navi_page">###NAVI_LABEL### ###NAVI_BACKWARDS### ###SEL_PREV######SEL_CURRENT######SEL_NEXT### ###NAVI_FORWARDS###</div>
 <!-- ###PAGE_NAVI_BLOCK### end -->
+
+
+<!-- ###PREF_NAVI_BLOCK### begin -->
+<div class="tx_sevenpack-navi_pref">###NAVI_LABEL### ###PREFERENCES###</div>
+<!-- ###PREF_NAVI_BLOCK### end -->
 
 
 <!-- ###EXPORT_BLOCK### begin -->
