Preferences selection basically working

--- a/res/table.tmpl
+++ b/res/table.tmpl
@@ -46,7 +46,7 @@
 
 
 <!-- ###PREF_NAVI_BLOCK### begin -->
-<div class="tx_sevenpack-navi_pref">###NAVI_LABEL### ###PREFERENCES###</div>
+<div class="tx_sevenpack-navi_pref">###NAVI_LABEL### ###FORM###</div>
 <!-- ###PREF_NAVI_BLOCK### end -->
 
 
@@ -106,6 +106,7 @@
 <!-- ###HAS_ANNOTATION### begin -->###ANNOTATION###<!-- ###HAS_ANNOTATION### end -->
 <!-- ###HAS_NOTE### begin -->###NOTE###<!-- ###HAS_NOTE### end -->
 <!-- ###HAS_KEYWORDS### begin -->###KEYWORDS###<!-- ###HAS_KEYWORDS### end -->
+<!-- ###HAS_TAGS### begin -->###TAGS###<!-- ###HAS_TAGS### end -->
 <!-- ###REFERENCE_WRAP### end -->
 </td>
 </tr>
