--- a/res/table.tmpl
+++ b/res/table.tmpl
@@ -7,6 +7,7 @@
 <div class="tx_sevenpack-top_navigation">
 <!-- ###HAS_NEW_ENTRY### begin -->###NEW_ENTRY###<!-- ###HAS_NEW_ENTRY### end -->
 <!-- ###HAS_YEAR_NAVI### begin -->###YEAR_NAVI_TOP###<!-- ###HAS_YEAR_NAVI### end -->
+<!-- ###HAS_AUTHOR_NAVI### begin -->###AUTHOR_NAVI_TOP###<!-- ###HAS_AUTHOR_NAVI### end -->
 <!-- ###HAS_PREF_NAVI### begin -->###PREF_NAVI_TOP###<!-- ###HAS_PREF_NAVI### end -->
 </div>
 <!-- ###HAS_TOP_NAVI### end -->
