--- a/res/templates/items.html
+++ b/res/templates/items.html
@@ -1,72 +1,5 @@
 
 
-<h1>List view section</h1>
-
-<!-- ###LIST_VIEW### begin -->
-<!-- ###HAS_TOP_NAVI### begin -->
-<div class="tx_sevenpack-top_navigation">
-<!-- ###HAS_NEW_ENTRY### begin -->###NEW_ENTRY###<!-- ###HAS_NEW_ENTRY### end -->
-<!-- ###HAS_YEAR_NAVI### begin -->###YEAR_NAVI_TOP###<!-- ###HAS_YEAR_NAVI### end -->
-<!-- ###HAS_AUTHOR_NAVI### begin -->###AUTHOR_NAVI_TOP###<!-- ###HAS_AUTHOR_NAVI### end -->
-<!-- ###HAS_PREF_NAVI### begin -->###PREF_NAVI_TOP###<!-- ###HAS_PREF_NAVI### end -->
-</div>
-<!-- ###HAS_TOP_NAVI### end -->
-<!-- ###HAS_PAGE_NAVI### begin -->###PAGE_NAVI_TOP###<!-- ###HAS_PAGE_NAVI### end -->
-<!-- ###HAS_ITEMS### begin -->
-<table cellspacing="0" cellpadding="0" border="0" class="tx_sevenpack-list">
-<tbody>
-###ITEMS###
-</tbody>
-</table>
-<!-- ###HAS_ITEMS### end -->
-<!-- ###HAS_PAGE_NAVI### begin -->###PAGE_NAVI_BOTTOM###<!-- ###HAS_PAGE_NAVI### end -->
-<!-- ###HAS_STATISTIC### begin -->###STATISTIC###<!-- ###HAS_STATISTIC### end -->
-<!-- ###HAS_IMPORT### begin -->###IMPORT###<!-- ###HAS_IMPORT### end -->
-<!-- ###HAS_EXPORT### begin -->###EXPORT###<!-- ###HAS_EXPORT### end -->
-<!-- ###LIST_VIEW### end -->
-
-
-
-
-<h1>Blocks</h1>
-
-
-<!-- ###NEW_ENTRY_BLOCK### begin -->
-<div class="tx_sevenpack-navi_new">###NEW_ENTRY###</div>
-<!-- ###NEW_ENTRY_BLOCK### end -->
-
-
-<!-- ###EXPORT_BLOCK### begin -->
-<div class="tx_sevenpack-navi_export">###LABEL### ###EXPORTS###</div>
-<!-- ###EXPORT_BLOCK### end -->
-
-
-<!-- ###IMPORT_BLOCK### begin -->
-<div class="tx_sevenpack-navi_import">###LABEL### ###IMPORTS###</div>
-<!-- ###IMPORT_BLOCK### end -->
-
-
-<!-- ###STATISTIC_BLOCK### begin -->
-<div class="tx_sevenpack-navi_statistic">###LABEL### ###STATISTIC###</div>
-<!-- ###STATISTIC_BLOCK### end -->
-
-
-<!-- ###SPACER_BLOCK### start -->
-<tr><td colspan="2" class="tx_sevenpack-spacer_row">&nbsp;</td></tr>
-<!-- ###SPACER_BLOCK### end -->
-
-
-<!-- ###YEAR_BLOCK### start -->
-<tr><td <!-- ###HAS_ENUM### begin -->colspan="2"<!-- ###HAS_ENUM### end --> class="tx_sevenpack-year_row">###YEAR###</td></tr>
-<!-- ###YEAR_BLOCK### end -->
-
-
-<!-- ###BIBTYPE_BLOCK### start -->
-<tr><th <!-- ###HAS_ENUM### begin -->colspan="2"<!-- ###HAS_ENUM### end --> class="tx_sevenpack-bibtype_row">###BIBTYPE###</th></tr>
-<!-- ###BIBTYPE_BLOCK### end -->
-
-
-
 
 <h1>Single item block</h1>
 
@@ -315,7 +248,7 @@
 
 
 <h2>Masterthesis</h2>
-<!-- ###MASTERTHESIS_DATA### begin -->
+<!-- ###MASTERSTHESIS_DATA### begin -->
 <div class="tx_sevenpack-block">
 <!-- ###HAS_TYPE### begin -->###TYPE###<!-- ###HAS_TYPE### end -->
 <!-- ###HAS_AFFILIATION### begin -->###AFFILIATION###<!-- ###HAS_AFFILIATION### end -->
@@ -326,7 +259,7 @@
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
 <!-- ###HAS_YEAR### begin -->###YEAR###<!-- ###HAS_YEAR### end -->
 </div>
-<!-- ###MASTERTHESIS_DATA### end -->
+<!-- ###MASTERSTHESIS_DATA### end -->
 
 
 
