Added the web_url field to the HTML template. Removed long url middle cropping.

--- a/res/templates/items.html
+++ b/res/templates/items.html
@@ -18,6 +18,9 @@
 <!-- ###HAS_TITLE### begin -->###TITLE###<!-- ###HAS_TITLE### end -->
 ###ITEM_DATA###
 <div class="tx_sevenpack-block">
+<!-- ###HAS_WEB_URL### begin -->###WEB_URL### <!-- ###HAS_WEB_URL### end -->
+</div>
+<div class="tx_sevenpack-block">
 <!-- ###HAS_ISBN### begin -->###ISBN### <!-- ###HAS_ISBN### end -->
 </div>
 <!-- ###HAS_STATE### begin -->###STATE###<!-- ###HAS_STATE### end -->
