Replaced sn,fn with surname,forename where possible

--- a/res/templates/navi_author.html
+++ b/res/templates/navi_author.html
@@ -1,4 +1,4 @@
 
 <!-- ###AUTHOR_NAVI_BLOCK### begin -->
-<div class="tx_sevenpack-navi_author">###NAVI_LABEL### ###SURNAME_SELECT###</div>
+<div class="tx_sevenpack-navi_author">###NAVI_LABEL### ###SELECTION### ###SURNAME_SELECT###</div>
 <!-- ###AUTHOR_NAVI_BLOCK### end -->
