Author navigation basic functionality

--- a/res/templates/navi_author.html
+++ b/res/templates/navi_author.html
@@ -1,4 +1,7 @@
 
 <!-- ###AUTHOR_NAVI_BLOCK### begin -->
-<div class="tx_sevenpack-navi_author">###NAVI_LABEL### ###SELECTION### ###SURNAME_SELECT###</div>
+<div class="tx_sevenpack-navi_author">
+<div>###NAVI_LABEL### ###LETTER_SELECTION###</div>
+<div>###SELECTION### ###SURNAME_SELECT###</div>
+</div>
 <!-- ###AUTHOR_NAVI_BLOCK### end -->
