--- a/res/templates/navi_year.html
+++ b/res/templates/navi_year.html
@@ -1,4 +1,4 @@
 
 <!-- ###YEAR_NAVI_BLOCK### begin -->
-<div class="tx_sevenpack-navi_year">###NAVI_LABEL### ###SELECTION### ###YEAR_SELECT###</div>
+<div class="tx_sevenpack-navi_year">###NAVI_LABEL### <span class="tx_sevenpack-navi_year_selection">###SELECTION###</span> ###YEAR_SELECT###</div>
 <!-- ###YEAR_NAVI_BLOCK### end -->
