Navigation bar styling

--- a/res/templates/navi_page.html
+++ b/res/templates/navi_page.html
@@ -1,4 +1,8 @@
 
 <!-- ###PAGE_NAVI_BLOCK### begin -->
-<div class="tx_sevenpack-navi_page">###NAVI_LABEL### ###NAVI_BACKWARDS### ###SELECTION### ###NAVI_FORWARDS###</div>
+<div class="tx_sevenpack-navi_page">
+<div class="tx_sevenpack-navi_main_label">###NAVI_LABEL### <span class="tx_sevenpack-navi_current">&nbsp;</span></div>
+<div class="tx_sevenpack-navi_page_selection">###NAVI_BACKWARDS### ###SELECTION### ###NAVI_FORWARDS###</div>
+<div class="tx_sevenpack-float_clear"></div>
+</div>
 <!-- ###PAGE_NAVI_BLOCK### end -->
