--- a/res/templates/navi_pref.html
+++ b/res/templates/navi_pref.html
@@ -1,4 +1,10 @@
 
 <!-- ###PREF_NAVI_BLOCK### begin -->
-<div class="tx_sevenpack-navi_pref">###NAVI_LABEL### ###FORM###</div>
+<div class="tx_sevenpack-navi_pref">
+<div class="tx_sevenpack-navi_main_label">###NAVI_LABEL###</div>
+###FORM_START###
+###SELECTION###
+###FORM_END###
+<div class="tx_sevenpack-float_clear"></div>
+</div>
 <!-- ###PREF_NAVI_BLOCK### end -->
