--- a/res/templates/navi_author.html
+++ b/res/templates/navi_author.html
@@ -1,7 +1,15 @@
 
 <!-- ###AUTHOR_NAVI_BLOCK### begin -->
 <div class="tx_sevenpack-navi_author">
-<div>###NAVI_LABEL### ###LETTER_SELECTION###</div>
-<div>###SELECTION### ###SURNAME_SELECT###</div>
+<div class="tx_sevenpack-navi_main_label">###NAVI_LABEL### <span class="tx_sevenpack-navi_current">&nbsp;</span></div>
+<div class="tx_sevenpack-navi_author_letters">###LETTER_SELECTION###</div>
+<div class="tx_sevenpack-float_clear"></div>
+
+<div class="tx_sevenpack-navi_author_row">
+<div class="tx_sevenpack-navi_author_selection">###SELECTION###<span class="tx_sevenpack-navi_current">&nbsp;</span></div> 
+<div class="tx_sevenpack-navi_author_select">###SURNAME_SELECT###<div class="tx_sevenpack-float_clear"></div></div>
+<div class="tx_sevenpack-float_clear"></div>
+</div>
+
 </div>
 <!-- ###AUTHOR_NAVI_BLOCK### end -->
