--- a/res/templates/navi_year.html
+++ b/res/templates/navi_year.html
@@ -1,4 +1,9 @@
 
 <!-- ###YEAR_NAVI_BLOCK### begin -->
-<div class="tx_sevenpack-navi_year">###NAVI_LABEL### <span class="tx_sevenpack-navi_year_selection">###SELECTION###</span> ###YEAR_SELECT###</div>
+<div class="tx_sevenpack-navi_year">
+<div class="tx_sevenpack-navi_main_label">###NAVI_LABEL### <span class="tx_sevenpack-navi_current">&nbsp;</span></div> 
+<div class="tx_sevenpack-navi_year_selection">###SELECTION###</div>
+<div class="tx_sevenpack-navi_year_select">###SELECT_FORM###</div>
+<div class="tx_sevenpack-float_clear"></div>
+</div>
 <!-- ###YEAR_NAVI_BLOCK### end -->
