Statistic navigation has been moved to a separate php class

--- a/res/templates/main.html
+++ b/res/templates/main.html
@@ -19,7 +19,7 @@
 </table>
 <!-- ###HAS_ITEMS### end -->
 <!-- ###HAS_PAGE_NAVI### begin -->###PAGE_NAVI_BOTTOM###<!-- ###HAS_PAGE_NAVI### end -->
-<!-- ###HAS_STATISTIC### begin -->###STATISTIC###<!-- ###HAS_STATISTIC### end -->
+<!-- ###HAS_STAT_NAVI### begin -->###STAT_NAVI_BOTTOM###<!-- ###HAS_STAT_NAVI### end -->
 <!-- ###HAS_IMPORT### begin -->###IMPORT###<!-- ###HAS_IMPORT### end -->
 <!-- ###HAS_EXPORT### begin -->###EXPORT###<!-- ###HAS_EXPORT### end -->
 <!-- ###LIST_VIEW### end -->
