Added missing files. Styling.

--- a/res/templates/blocks.html
+++ b/res/templates/blocks.html
@@ -8,12 +8,18 @@
 
 
 <!-- ###EXPORT_BLOCK### begin -->
-<div class="tx_sevenpack-navi_export">###LABEL### ###EXPORTS###</div>
+<div class="tx_sevenpack-navi_export">
+<div class="tx_sevenpack-navi_main_label">###LABEL###</div>
+###EXPORTS###
+</div>
 <!-- ###EXPORT_BLOCK### end -->
 
 
 <!-- ###IMPORT_BLOCK### begin -->
-<div class="tx_sevenpack-navi_import">###LABEL### ###IMPORTS###</div>
+<div class="tx_sevenpack-navi_import">
+<div class="tx_sevenpack-navi_main_label">###LABEL###</div>
+###IMPORTS###
+</div>
 <!-- ###IMPORT_BLOCK### end -->
 
 
