Initial search bar files

--- a/res/templates/main.html
+++ b/res/templates/main.html
@@ -5,6 +5,7 @@
 <!-- ###HAS_TOP_NAVI### begin -->
 <div class="tx_sevenpack-top_navigation">
 <!-- ###HAS_NEW_ENTRY### begin -->###NEW_ENTRY###<!-- ###HAS_NEW_ENTRY### end -->
+<!-- ###HAS_SEARCH_NAVI### begin -->###SEARCH_NAVI_TOP###<!-- ###HAS_SEARCH_NAVI### end -->
 <!-- ###HAS_YEAR_NAVI### begin -->###YEAR_NAVI_TOP###<!-- ###HAS_YEAR_NAVI### end -->
 <!-- ###HAS_AUTHOR_NAVI### begin -->###AUTHOR_NAVI_TOP###<!-- ###HAS_AUTHOR_NAVI### end -->
 <!-- ###HAS_PREF_NAVI### begin -->###PREF_NAVI_TOP###<!-- ###HAS_PREF_NAVI### end -->
