Inline error messages in the list view in edit mode

--- a/res/templates/list_items.html
+++ b/res/templates/list_items.html
@@ -30,6 +30,7 @@
 <!-- ###HAS_KEYWORDS### begin -->###KEYWORDS###<!-- ###HAS_KEYWORDS### end -->
 <!-- ###HAS_TAGS### begin -->###TAGS###<!-- ###HAS_TAGS### end -->
 <!-- ###REFERENCE_WRAP### end -->
+###ITEM_APPEND###
 </td>
 </tr>
 <!-- ###ITEM_BLOCK### -->
