Moved some wraps from TS back to the HTML template

--- a/res/templates/list_items.html
+++ b/res/templates/list_items.html
@@ -12,25 +12,56 @@
 </td>
 <!-- ###HAS_ENUM### end -->
 <td class="###ROW_CLASS###">
+
 <!-- ###HAS_MANIPULATORS### begin -->###MANIPULATORS###<!-- ###HAS_MANIPULATORS### end -->
+
 <!-- ###REFERENCE_WRAP### begin -->
-<!-- ###HAS_AUTHORS### begin -->###AUTHORS###<!-- ###HAS_AUTHORS### end -->
-<!-- ###HAS_TITLE### begin -->###TITLE###<!-- ###HAS_TITLE### end -->
+
+<!-- ###HAS_AUTHORS### begin -->
+<div class="tx_sevenpack-authors">###AUTHORS###</div>
+<!-- ###HAS_AUTHORS### end -->
+
+<!-- ###HAS_TITLE### begin -->
+<div class="tx_sevenpack-title">###TITLE###</div>
+<!-- ###HAS_TITLE### end -->
+
 ###ITEM_DATA###
-<div class="tx_sevenpack-block">
-<!-- ###HAS_WEB_URL### begin -->###WEB_URL### <!-- ###HAS_WEB_URL### end -->
-</div>
-<div class="tx_sevenpack-block">
-<!-- ###HAS_ISBN### begin -->###ISBN### <!-- ###HAS_ISBN### end -->
-</div>
-<!-- ###HAS_STATE### begin -->###STATE###<!-- ###HAS_STATE### end -->
-<!-- ###HAS_ABSTRACT### begin -->###ABSTRACT###<!-- ###HAS_ABSTRACT### end -->
-<!-- ###HAS_ANNOTATION### begin -->###ANNOTATION###<!-- ###HAS_ANNOTATION### end -->
-<!-- ###HAS_NOTE### begin -->###NOTE###<!-- ###HAS_NOTE### end -->
-<!-- ###HAS_KEYWORDS### begin -->###KEYWORDS###<!-- ###HAS_KEYWORDS### end -->
-<!-- ###HAS_TAGS### begin -->###TAGS###<!-- ###HAS_TAGS### end -->
+
+<!-- ###HAS_WEB_URL### begin -->
+<div class="tx_sevenpack-block">###WEB_URL###</div>
+<!-- ###HAS_WEB_URL### end -->
+
+<!-- ###HAS_ISBN### begin -->
+<div class="tx_sevenpack-block">###LABEL_ISBN### ###ISBN###</div>
+<!-- ###HAS_ISBN### end -->
+
+<!-- ###HAS_STATE### begin -->
+<span class="tx_sevenpack-state">###STATE###</span>
+<!-- ###HAS_STATE### end -->
+
+<!-- ###HAS_ABSTRACT### begin -->
+<p class="tx_sevenpack-abstract_block">###LABEL_ABSTRACT### ###ABSTRACT###</p>
+<!-- ###HAS_ABSTRACT### end -->
+
+<!-- ###HAS_ANNOTATION### begin -->
+<p class="tx_sevenpack-annotation_block">###LABEL_ANNOTATION### ###ANNOTATION###</p>
+<!-- ###HAS_ANNOTATION### end -->
+
+<!-- ###HAS_NOTE### begin -->
+<p class="tx_sevenpack-note_block">###LABEL_NOTE### ###NOTE###</p>
+<!-- ###HAS_NOTE### end -->
+
+<!-- ###HAS_KEYWORDS### begin -->
+<p class="tx_sevenpack-keywords_block">###LABEL_KEYWORDS### ###KEYWORDS###</p>
+<!-- ###HAS_KEYWORDS### end -->
+
+<!-- ###HAS_TAGS### begin -->
+<p class="tx_sevenpack-tags_block">###LABEL_TAGS### ###TAGS###</p>
+<!-- ###HAS_TAGS### end -->
+
 <!-- ###REFERENCE_WRAP### end -->
 ###ITEM_APPEND###
+
 </td>
 </tr>
 <!-- ###ITEM_BLOCK### -->
