Added an error message if a reference update fails

--- a/res/templates/list_items.html
+++ b/res/templates/list_items.html
@@ -392,3 +392,18 @@
 <!-- ###POSTER_DATA### end -->
 
 
+
+<h2>Thesis</h2>
+<!-- ###THESIS_DATA### begin -->
+<div class="tx_sevenpack-block">
+<!-- ###HAS_TYPE### begin -->###TYPE###<!-- ###HAS_TYPE### end -->
+<!-- ###HAS_AFFILIATION### begin -->###AFFILIATION###<!-- ###HAS_AFFILIATION### end -->
+</div>
+<div class="tx_sevenpack-block">
+<!-- ###HAS_SCHOOL### begin -->###SCHOOL### <!-- ###HAS_SCHOOL### end -->
+<!-- ###HAS_ADDRESS### begin -->###ADDRESS###<!-- ###HAS_ADDRESS### end -->
+<!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
+<!-- ###HAS_YEAR### begin -->###YEAR###<!-- ###HAS_YEAR### end -->
+</div>
+<!-- ###THESIS_DATA### end -->
+
