Friday release. Style polish. Bug fixes.

--- a/res/templates/list_items.html
+++ b/res/templates/list_items.html
@@ -28,7 +28,7 @@
 ###ITEM_DATA###
 
 <!-- ###HAS_WEB_URL### begin -->
-<div class="tx_sevenpack-block">###WEB_URL###</div>
+<div class="tx_sevenpack-url_block">###WEB_URL_SHORT###</div>
 <!-- ###HAS_WEB_URL### end -->
 
 <!-- ###HAS_ISBN### begin -->
@@ -90,7 +90,7 @@
 <!-- ###HAS_ADDRESS### begin -->###ADDRESS### <!-- ###HAS_ADDRESS### end -->
 <!-- ###HAS_EDITION### begin -->###EDITION### <!-- ###HAS_EDITION### end -->
 <!-- ###HAS_HOWPUBLISHED### begin -->###HOWPUBLISHED### <!-- ###HAS_HOWPUBLISHED### end -->
-<!-- ###HAS_YEAR### begin -->###YEAR### <!-- ###HAS_YEAR### end -->
+<!-- ###HAS_YEAR### begin -->###YEAR###. <!-- ###HAS_YEAR### end -->
 <!-- ###HAS_ISBN### begin -->###ISBN### <!-- ###HAS_ISBN### end -->
 <!-- ###HAS_AFFILIATION### begin -->###AFFILIATION###<!-- ###HAS_AFFILIATION### end -->
 <!-- ###HAS_EXTERN### begin -->###EXTERN###<!-- ###HAS_EXTERN### end -->
@@ -104,7 +104,10 @@
 <!-- ###HAS_JOURNAL### begin -->###JOURNAL###<!-- ###HAS_JOURNAL### end -->
 <!-- ###HAS_VOLUME### begin -->###VOLUME###<!-- ###HAS_VOLUME### end --><!-- ###HAS_NUMBER### begin-->###NUMBER###<!-- ###HAS_NUMBER### end--><!-- ###HAS_PAGES### begin -->###PAGES### <!-- ###HAS_PAGES### end -->
 <!-- ###HAS_AFFILIATION### begin -->###AFFILIATION###<!-- ###HAS_AFFILIATION### end -->
-<!-- ###HAS_YEAR### begin -->###YEAR###<!-- ###HAS_YEAR### end -->
+<!-- ###HAS_YEAR### begin -->###YEAR###.<!-- ###HAS_YEAR### end -->
+<!-- ###HAS_DOI### begin -->
+<div class="tx_sevenpack-block">###LABEL_DOI###: ###DOI###</div>
+<!-- ###HAS_DOI### end -->
 <!-- ###ARTICLE_DATA### end -->
 
 
@@ -121,7 +124,7 @@
 <!-- ###HAS_ADDRESS### begin -->###ADDRESS###<!-- ###HAS_ADDRESS### end -->
 <!-- ###HAS_EDITION### begin -->###EDITION###<!-- ###HAS_EDITION### end -->
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-<!-- ###HAS_YEAR### begin -->###YEAR###<!-- ###HAS_YEAR### end -->
+<!-- ###HAS_YEAR### begin -->###YEAR###.<!-- ###HAS_YEAR### end -->
 </div>
 <!-- ###BOOK_DATA### end -->
 
@@ -147,7 +150,7 @@
 <!-- ###HAS_ADDRESS### begin -->###ADDRESS### <!-- ###HAS_ADDRESS### end -->
 <!-- ###HAS_EDITION### begin -->###EDITION### <!-- ###HAS_EDITION### end -->
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-<!-- ###HAS_YEAR### begin -->###YEAR###<!-- ###HAS_YEAR### end -->
+<!-- ###HAS_YEAR### begin -->###YEAR###.<!-- ###HAS_YEAR### end -->
 </div>
 <!-- ###INBOOK_DATA### end -->
 
@@ -162,7 +165,7 @@
 <!-- ###HAS_HOWPUBLISHED### begin -->###HOWPUBLISHED###<!-- ###HAS_HOWPUBLISHED### end -->
 <!-- ###HAS_ADDRESS### begin -->###ADDRESS###<!-- ###HAS_ADDRESS### end -->
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-<!-- ###HAS_YEAR### begin -->###YEAR### <!-- ###HAS_YEAR### end -->
+<!-- ###HAS_YEAR### begin -->###YEAR###. <!-- ###HAS_YEAR### end -->
 </div>
 <!-- ###BOOKLET_DATA### end -->
 
@@ -182,7 +185,7 @@
 <!-- ###HAS_PUBLISHER### begin -->###PUBLISHER### <!-- ###HAS_PUBLISHER### end -->
 <!-- ###HAS_ADDRESS### begin -->###ADDRESS### <!-- ###HAS_ADDRESS### end -->
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-<!-- ###HAS_YEAR### begin -->###YEAR### <!-- ###HAS_YEAR### end -->
+<!-- ###HAS_YEAR### begin -->###YEAR###. <!-- ###HAS_YEAR### end -->
 </div>
 <!-- ###CONFERENCE_DATA### end -->
 
@@ -211,7 +214,7 @@
 <!-- ###HAS_ADDRESS### begin -->###ADDRESS###<!-- ###HAS_ADDRESS### end -->
 <!-- ###HAS_EDITION### begin -->###EDITION###<!-- ###HAS_EDITION### end -->
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-<!-- ###HAS_YEAR### begin -->###YEAR###<!-- ###HAS_YEAR### end -->
+<!-- ###HAS_YEAR### begin -->###YEAR###.<!-- ###HAS_YEAR### end -->
 </div>
 <!-- ###INCOLLECTION_DATA### end -->
 
@@ -234,7 +237,7 @@
 <!-- ###HAS_PUBLISHER### begin -->###PUBLISHER###<!-- ###HAS_PUBLISHER### end -->
 <!-- ###HAS_ADDRESS### begin -->###ADDRESS###<!-- ###HAS_ADDRESS### end -->
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-<!-- ###HAS_YEAR### begin -->###YEAR###<!-- ###HAS_YEAR### end -->
+<!-- ###HAS_YEAR### begin -->###YEAR###.<!-- ###HAS_YEAR### end -->
 </div>
 <!-- ###PROCEEDINGS_DATA### end -->
 
@@ -257,7 +260,7 @@
 <!-- ###HAS_PUBLISHER### begin -->###PUBLISHER###<!-- ###HAS_PUBLISHER### end -->
 <!-- ###HAS_ADDRESS### begin -->###ADDRESS###<!-- ###HAS_ADDRESS### end -->
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-<!-- ###HAS_YEAR### begin -->###YEAR###<!-- ###HAS_YEAR### end -->
+<!-- ###HAS_YEAR### begin -->###YEAR###.<!-- ###HAS_YEAR### end -->
 </div>
 <!-- ###INPROCEEDINGS_DATA### end -->
 
@@ -276,7 +279,7 @@
 <!-- ###HAS_ADDRESS### begin -->###ADDRESS###<!-- ###HAS_ADDRESS### end -->
 <!-- ###HAS_EDITION### begin -->###EDITION###<!-- ###HAS_EDITION### end -->
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-<!-- ###HAS_YEAR### begin -->###YEAR###<!-- ###HAS_YEAR### end -->
+<!-- ###HAS_YEAR### begin -->###YEAR###.<!-- ###HAS_YEAR### end -->
 </div>
 <!-- ###MANUAL_DATA### end -->
 
@@ -292,7 +295,7 @@
 <!-- ###HAS_SCHOOL### begin -->###SCHOOL### <!-- ###HAS_SCHOOL### end -->
 <!-- ###HAS_ADDRESS### begin -->###ADDRESS###<!-- ###HAS_ADDRESS### end -->
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-<!-- ###HAS_YEAR### begin -->###YEAR###<!-- ###HAS_YEAR### end -->
+<!-- ###HAS_YEAR### begin -->###YEAR###.<!-- ###HAS_YEAR### end -->
 </div>
 <!-- ###MASTERSTHESIS_DATA### end -->
 
@@ -308,7 +311,7 @@
 <!-- ###HAS_SCHOOL### begin -->###SCHOOL### <!-- ###HAS_SCHOOL### end -->
 <!-- ###HAS_ADDRESS### begin -->###ADDRESS###<!-- ###HAS_ADDRESS### end -->
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-<!-- ###HAS_YEAR### begin -->###YEAR###<!-- ###HAS_YEAR### end -->
+<!-- ###HAS_YEAR### begin -->###YEAR###.<!-- ###HAS_YEAR### end -->
 </div>
 <!-- ###PHDTHESIS_DATA### end -->
 
@@ -325,7 +328,7 @@
 <!-- ###HAS_INSTITUTION### begin -->###INSTITUTION### <!-- ###HAS_INSTITUTION### end -->
 <!-- ###HAS_ADDRESS### begin -->###ADDRESS###<!-- ###HAS_ADDRESS### end -->
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-<!-- ###HAS_YEAR### begin -->###YEAR###<!-- ###HAS_YEAR### end -->
+<!-- ###HAS_YEAR### begin -->###YEAR###.<!-- ###HAS_YEAR### end -->
 </div>
 <!-- ###TECHREPORT_DATA### end -->
 
@@ -338,7 +341,7 @@
 </div>
 <div class="tx_sevenpack-block">
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-<!-- ###HAS_YEAR### begin -->###YEAR###<!-- ###HAS_YEAR### end -->
+<!-- ###HAS_YEAR### begin -->###YEAR###.<!-- ###HAS_YEAR### end -->
 </div>
 <!-- ###UNPUBLISHED_DATA### end -->
 
@@ -352,7 +355,7 @@
 <div class="tx_sevenpack-block">
 <!-- ###HAS_HOWPUBLISHED### begin -->###HOWPUBLISHED###<!-- ###HAS_HOWPUBLISHED### end -->
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-<!-- ###HAS_YEAR### begin -->###YEAR###<!-- ###HAS_YEAR### end -->
+<!-- ###HAS_YEAR### begin -->###YEAR###.<!-- ###HAS_YEAR### end -->
 </div>
 <!-- ###MISCELLANEOUS_DATA### end -->
 
@@ -387,7 +390,7 @@
 <!-- ###HAS_ADDRESS### begin -->###ADDRESS###<!-- ###HAS_ADDRESS### end -->
 <!-- ###HAS_DAY### begin -->###DAY###<!-- ###HAS_DAY### end -->
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-<!-- ###HAS_YEAR### begin -->###YEAR###<!-- ###HAS_YEAR### end -->
+<!-- ###HAS_YEAR### begin -->###YEAR###.<!-- ###HAS_YEAR### end -->
 </div>
 <!-- ###POSTER_DATA### end -->
 
@@ -403,7 +406,7 @@
 <!-- ###HAS_SCHOOL### begin -->###SCHOOL### <!-- ###HAS_SCHOOL### end -->
 <!-- ###HAS_ADDRESS### begin -->###ADDRESS###<!-- ###HAS_ADDRESS### end -->
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-<!-- ###HAS_YEAR### begin -->###YEAR###<!-- ###HAS_YEAR### end -->
+<!-- ###HAS_YEAR### begin -->###YEAR###.<!-- ###HAS_YEAR### end -->
 </div>
 <!-- ###THESIS_DATA### end -->
 
