--- a/res/templates/main.html
+++ b/res/templates/main.html
@@ -13,15 +13,20 @@
 <!-- ###HAS_TOP_NAVI### end -->
 <!-- ###HAS_PAGE_NAVI### begin -->###PAGE_NAVI_TOP###<!-- ###HAS_PAGE_NAVI### end -->
 <!-- ###HAS_ITEMS### begin -->
+<div class="tx_sevenpack-navi_main_label">References</div>
+<div class="tx_sevenpack-list_container">
 <table cellspacing="0" cellpadding="0" border="0" class="tx_sevenpack-list">
 <tbody>
 ###ITEMS###
 </tbody>
 </table>
+</div>
 <!-- ###HAS_ITEMS### end -->
+<div class="tx_sevenpack-bottom_navigation">
 <!-- ###HAS_PAGE_NAVI### begin -->###PAGE_NAVI_BOTTOM###<!-- ###HAS_PAGE_NAVI### end -->
 <!-- ###HAS_STAT_NAVI### begin -->###STAT_NAVI_BOTTOM###<!-- ###HAS_STAT_NAVI### end -->
 <!-- ###HAS_IMPORT### begin -->###IMPORT###<!-- ###HAS_IMPORT### end -->
 <!-- ###HAS_EXPORT### begin -->###EXPORT###<!-- ###HAS_EXPORT### end -->
+</div>
 <!-- ###LIST_VIEW### end -->
 
