Localized References label

--- a/res/templates/main.html
+++ b/res/templates/main.html
@@ -13,7 +13,7 @@
 <!-- ###HAS_TOP_NAVI### end -->
 <!-- ###HAS_PAGE_NAVI### begin -->###PAGE_NAVI_TOP###<!-- ###HAS_PAGE_NAVI### end -->
 <!-- ###HAS_ITEMS### begin -->
-<div class="tx_sevenpack-navi_main_label">References</div>
+<div class="tx_sevenpack-navi_main_label">###LABEL_REFERENCES###</div>
 <div class="tx_sevenpack-list_container">
 <table cellspacing="0" cellpadding="0" border="0" class="tx_sevenpack-list">
 <tbody>
