Search bar updates. Citeid check only for non empty citeids.

--- a/res/templates/navi_search.html
+++ b/res/templates/navi_search.html
@@ -2,7 +2,19 @@
 <!-- ###SEARCH_NAVI_BLOCK### begin -->
 <div class="tx_sevenpack-navi_search">
 <div class="tx_sevenpack-navi_main_label">###NAVI_LABEL### <span class="tx_sevenpack-navi_current">&nbsp;</span></div>
-###SEARCH###
+###FORM_START###
+###SEARCH_BAR### ###EXTRA_BTN###
+###FORM_END###
 <div class="tx_sevenpack-float_clear"></div>
+
+<!-- ###HAS_EXTRA### begin -->
+<div class="tx_sevenpack-navi_extra_row">
+<div class="tx_sevenpack-navi_search_details">
+sdfg
+</div>
+<div class="tx_sevenpack-float_clear"></div>
+</div>
+<!-- ###HAS_EXTRA### end -->
+
 </div>
 <!-- ###SEARCH_NAVI_BLOCK### end -->
