Extended search bar

--- a/res/templates/main.html
+++ b/res/templates/main.html
@@ -9,6 +9,7 @@
 <!-- ###HAS_YEAR_NAVI### begin -->###YEAR_NAVI_TOP###<!-- ###HAS_YEAR_NAVI### end -->
 <!-- ###HAS_AUTHOR_NAVI### begin -->###AUTHOR_NAVI_TOP###<!-- ###HAS_AUTHOR_NAVI### end -->
 <!-- ###HAS_PREF_NAVI### begin -->###PREF_NAVI_TOP###<!-- ###HAS_PREF_NAVI### end -->
+<!-- ###HAS_STAT_NAVI### begin -->###STAT_NAVI_TOP###<!-- ###HAS_STAT_NAVI### end -->
 </div>
 <!-- ###HAS_TOP_NAVI### end -->
 <!-- ###HAS_PAGE_NAVI### begin -->###PAGE_NAVI_TOP###<!-- ###HAS_PAGE_NAVI### end -->
