--- a/res/templates/main.html
+++ b/res/templates/main.html
@@ -13,16 +13,17 @@
 </div>
 <!-- ###HAS_TOP_NAVI### end -->
 <!-- ###HAS_PAGE_NAVI### begin -->###PAGE_NAVI_TOP###<!-- ###HAS_PAGE_NAVI### end -->
-<!-- ###HAS_ITEMS### begin -->
 <div class="tx_sevenpack-navi_main_label">###LABEL_REFERENCES###</div>
 <div class="tx_sevenpack-list_container">
+<!-- ###HAS_ITEMS### begin -->
 <table cellspacing="0" cellpadding="0" border="0" class="tx_sevenpack-list">
 <tbody>
 ###ITEMS###
 </tbody>
 </table>
-</div>
 <!-- ###HAS_ITEMS### end -->
+###POST_ITEMS###
+</div>
 <div class="tx_sevenpack-bottom_navigation">
 <!-- ###HAS_PAGE_NAVI### begin -->###PAGE_NAVI_BOTTOM###<!-- ###HAS_PAGE_NAVI### end -->
 <!-- ###HAS_STAT_NAVI### begin -->###STAT_NAVI_BOTTOM###<!-- ###HAS_STAT_NAVI### end -->
