Export navi code polishing

--- a/res/templates/main.html
+++ b/res/templates/main.html
@@ -21,6 +21,7 @@
 ###ITEMS###
 </tbody>
 </table>
+<div class="tx_sevenpack-float_clear"></div>
 <!-- ###HAS_ITEMS### end -->
 ###POST_ITEMS###
 </div>
