Added a 'no_item' info string

--- a/res/templates/main.html
+++ b/res/templates/main.html
@@ -23,7 +23,7 @@
 </table>
 <div class="tx_sevenpack-float_clear"></div>
 <!-- ###HAS_ITEMS### end -->
-###POST_ITEMS###
+###NO_ITEMS###
 </div>
 <div class="tx_sevenpack-bottom_navigation">
 <!-- ###HAS_PAGE_NAVI### begin -->###PAGE_NAVI_BOTTOM###<!-- ###HAS_PAGE_NAVI### end -->
