The author filter code is only included on demand via a hook in p1

--- a/res/templates/navi_author.html
+++ b/res/templates/navi_author.html
@@ -2,7 +2,7 @@
 <!-- ###AUTHOR_NAVI_BLOCK### begin -->
 <div class="tx_sevenpack-navi_author">
 <div class="tx_sevenpack-navi_main_label">###NAVI_LABEL### <span class="tx_sevenpack-navi_current">&nbsp;</span></div>
-<div class="tx_sevenpack-navi_author_letters">###LETTER_SELECTION###</div>
+<div class="tx_sevenpack-navi_author_letters">###LETTER_SELECTION###<span class="tx_sevenpack-navi_current">&nbsp;</span></div>
 <div class="tx_sevenpack-float_clear"></div>
 </div>
 
