--- a/res/templates/navi_search.html
+++ b/res/templates/navi_search.html
@@ -9,7 +9,13 @@
 <!-- ###HAS_EXTRA### begin -->
 <div class="tx_sevenpack-navi_extra_row">
 <div class="tx_sevenpack-navi_search_details">
-###SEPARATOR_SEL### ###RULE_SEL### ###ABSTRACTS_BTN###
+###SEPARATOR_SEL### ###RULE_SEL###
+</div>
+<div class="tx_sevenpack-float_clear"></div>
+</div>
+<div class="tx_sevenpack-navi_extra_row">
+<div class="tx_sevenpack-navi_search_details">
+###ABSTRACTS_BTN###
 </div>
 <div class="tx_sevenpack-float_clear"></div>
 </div>
