Added a full_text field and search option

--- a/res/templates/navi_search.html
+++ b/res/templates/navi_search.html
@@ -15,7 +15,7 @@
 </div>
 <div class="tx_sevenpack-navi_extra_row">
 <div class="tx_sevenpack-navi_search_details">
-###ABSTRACTS_BTN###
+###ABSTRACTS_BTN### ###FULL_TEXT_BTN###
 </div>
 <div class="tx_sevenpack-float_clear"></div>
 </div>
