Editor lists by using ' and ' as separator

--- a/res/templates/list_items.html
+++ b/res/templates/list_items.html
@@ -75,7 +75,7 @@
 <h2>Default</h2>
 <!-- ###DEFAULT_DATA### begin -->
 <!-- ###HAS_JOURNAL### begin -->###JOURNAL### <!-- ###HAS_JOURNAL### end -->
-<!-- ###HAS_EDITOR### begin -->###EDITOR### <!-- ###HAS_EDITOR### end -->
+<!-- ###HAS_EDITOR### begin -->In ###EDITOR###, ###LABEL_EDITOR###,<!-- ###HAS_EDITOR### end -->
 <!-- ###HAS_BOOKTITLE### begin -->###BOOKTITLE### <!-- ###HAS_BOOKTITLE### end -->
 <!-- ###HAS_VOLUME### begin -->###VOLUME### <!-- ###HAS_VOLUME### end -->
 <!-- ###HAS_NUMBER### begin-->###NUMBER###<!-- ###HAS_NUMBER### end-->
@@ -115,7 +115,7 @@
 <h2>Book</h2>
 <!-- ###BOOK_DATA### begin -->
 <div class="tx_sevenpack-block">
-<!-- ###HAS_EDITOR### begin -->###EDITOR###<!-- ###HAS_EDITOR### end -->
+<!-- ###HAS_EDITOR### begin -->In ###EDITOR###, ###LABEL_EDITOR###,<!-- ###HAS_EDITOR### end -->
 <!-- ###HAS_VOLUME### begin -->###VOLUME###<!-- ###HAS_VOLUME### end -->
 <!-- ###HAS_SERIES### begin -->###SERIES###<!-- ###HAS_SERIES### end -->
 </div>
@@ -133,7 +133,7 @@
 <h2>Inbook</h2>
 <!-- ###INBOOK_DATA### begin -->
 <div class="tx_sevenpack-block">
-<!-- ###HAS_EDITOR### begin -->###EDITOR###<!-- ###HAS_EDITOR### end -->
+<!-- ###HAS_EDITOR### begin -->In ###EDITOR###, ###LABEL_EDITOR###,<!-- ###HAS_EDITOR### end -->
 <!-- ###HAS_VOLUME### begin -->###VOLUME###<!-- ###HAS_VOLUME### end -->
 <!-- ###HAS_SERIES### begin -->###SERIES###<!-- ###HAS_SERIES### end -->
 </div>
@@ -174,7 +174,7 @@
 <h2>Conference</h2>
 <!-- ###CONFERENCE_DATA### begin -->
 <div class="tx_sevenpack-block">
-<!-- ###HAS_EDITOR### begin -->###EDITOR###<!-- ###HAS_EDITOR### end -->
+<!-- ###HAS_EDITOR### begin -->In ###EDITOR###, ###LABEL_EDITOR###,<!-- ###HAS_EDITOR### end -->
 <!-- ###HAS_BOOKTITLE### begin -->###BOOKTITLE###<!-- ###HAS_BOOKTITLE### end --><!-- ###HAS_VOLUME### begin -->###VOLUME###<!-- ###HAS_VOLUME### end -->
 <!-- ###HAS_SERIES### begin -->###SERIES###<!-- ###HAS_SERIES### end --><!-- ###HAS_PAGES### begin -->###PAGES###<!-- ###HAS_PAGES### end -->
 </div>
@@ -194,7 +194,7 @@
 <h2>Incollection</h2>
 <!-- ###INCOLLECTION_DATA### begin -->
 <div class="tx_sevenpack-block">
-<!-- ###HAS_EDITOR### begin -->###EDITOR###<!-- ###HAS_EDITOR### end -->
+<!-- ###HAS_EDITOR### begin -->In ###EDITOR###, ###LABEL_EDITOR###,<!-- ###HAS_EDITOR### end -->
 <!-- ###HAS_BOOKTITLE### begin -->###BOOKTITLE###<!-- ###HAS_BOOKTITLE### end --><!-- ###HAS_VOLUME### begin -->###VOLUME###<!-- ###HAS_VOLUME### end -->
 <!-- ###HAS_SERIES### begin -->###SERIES###<!-- ###HAS_SERIES### end -->
 </div>
@@ -223,7 +223,7 @@
 <h2>Proceeding</h2>
 <!-- ###PROCEEDINGS_DATA### begin -->
 <div class="tx_sevenpack-block">
-<!-- ###HAS_EDITOR### begin -->###EDITOR###<!-- ###HAS_EDITOR### end -->
+<!-- ###HAS_EDITOR### begin -->In ###EDITOR###, ###LABEL_EDITOR###,<!-- ###HAS_EDITOR### end -->
 <!-- ###HAS_VOLUME### begin -->###VOLUME###<!-- ###HAS_VOLUME### end -->
 <!-- ###HAS_SERIES### begin -->###SERIES###<!-- ###HAS_SERIES### end -->
 </div>
@@ -246,7 +246,7 @@
 <h2>Inproceeding</h2>
 <!-- ###INPROCEEDINGS_DATA### begin -->
 <div class="tx_sevenpack-block">
-<!-- ###HAS_EDITOR### begin -->###EDITOR###<!-- ###HAS_EDITOR### end -->
+<!-- ###HAS_EDITOR### begin -->In ###EDITOR###, ###LABEL_EDITOR###,<!-- ###HAS_EDITOR### end -->
 <!-- ###HAS_BOOKTITLE### begin -->###BOOKTITLE###<!-- ###HAS_BOOKTITLE### end --><!-- ###HAS_VOLUME### begin -->###VOLUME###<!-- ###HAS_VOLUME### end -->
 <!-- ###HAS_SERIES### begin -->###SERIES###<!-- ###HAS_SERIES### end --><!-- ###HAS_PAGES### begin -->###PAGES###<!-- ###HAS_PAGES### end -->
 </div>
@@ -269,7 +269,7 @@
 <h2>Manual</h2>
 <!-- ###MANUAL_DATA### begin -->
 <div class="tx_sevenpack-block">
-<!-- ###HAS_EDITOR### begin -->###EDITOR###<!-- ###HAS_EDITOR### end -->
+<!-- ###HAS_EDITOR### begin -->In ###EDITOR###, ###LABEL_EDITOR###,<!-- ###HAS_EDITOR### end -->
 </div>
 <div class="tx_sevenpack-block">
 <!-- ###HAS_AFFILIATION### begin -->###AFFILIATION###<!-- ###HAS_AFFILIATION### end -->
@@ -377,7 +377,7 @@
 <h2>Poster</h2>
 <!-- ###POSTER_DATA### begin -->
 <div class="tx_sevenpack-block">
-<!-- ###HAS_EDITOR### begin -->###EDITOR###<!-- ###HAS_EDITOR### end -->
+<!-- ###HAS_EDITOR### begin -->In ###EDITOR###, ###LABEL_EDITOR###,<!-- ###HAS_EDITOR### end -->
 </div>
 <div class="tx_sevenpack-block">
 <!-- ###HAS_AFFILIATION### begin -->###AFFILIATION###<!-- ###HAS_AFFILIATION### end -->
