Added optional field OR condition to the required field

--- a/res/templates/navi_pref.html
+++ b/res/templates/navi_pref.html
@@ -3,7 +3,7 @@
 <div class="tx_sevenpack-navi_pref">
 ###FORM_START###
 <div class="tx_sevenpack-navi_main_label">###NAVI_LABEL###<span class="tx_sevenpack-navi_current">&nbsp;</span></div>
-###IPP_SEL###  ###SHOW_ABSTRACTS### ###SHOW_KEYS### ###GO###
+###IPP_SEL###  ###SHOW_KEYS### ###SHOW_ABSTRACTS### ###GO###
 <div class="tx_sevenpack-float_clear"></div>
 ###FORM_END###
 </div>
