HTML tempalte for manuscript type

--- a/res/templates/list_items.html
+++ b/res/templates/list_items.html
@@ -626,6 +626,10 @@
 <h2>Report</h2>
 <!-- ###REPORT_DATA### begin -->
 
+<!-- ###HAS_SERIES### begin -->
+###LABEL_OF_SERIES### <span class="tx_sevenpack-series">###SERIES###</span>
+<!-- ###HAS_SERIES### end -->
+
 <!-- ###HAS_TYPE### begin -->
 <div class="tx_sevenpack-block">###TYPE###</div>
 <!-- ###HAS_TYPE### end -->
@@ -655,3 +659,43 @@
 <!-- ###HAS_AFFILIATION### end -->
 
 <!-- ###REPORT_DATA### begin -->
+
+
+
+<h2>Manuscript</h2>
+<!-- ###MANUSCRIPT_DATA### begin -->
+
+<!-- ###HAS_SERIES### begin -->
+###LABEL_OF_SERIES### <span class="tx_sevenpack-series">###SERIES###</span>
+<!-- ###HAS_SERIES### end -->
+
+<!-- ###HAS_TYPE### begin -->
+<div class="tx_sevenpack-block">###TYPE###</div>
+<!-- ###HAS_TYPE### end -->
+
+<!-- ###HAS_INSTITUTION### begin -->
+<div class="tx_sevenpack-block">###INSTITUTION###</div>
+<!-- ###HAS_INSTITUTION### end -->
+
+<!-- ###HAS_INSTITUTE### begin -->
+<div class="tx_sevenpack-block">###INSTITUTE###</div>
+<!-- ###HAS_INSTITUTE### end -->
+
+<div class="tx_sevenpack-block">
+<!-- ###HAS_PUBLISHER### begin -->###LABEL_PUBLISHER### ###PUBLISHER###, <!-- ###HAS_PUBLISHER### end --><!-- 
+###HAS_ADDRESS### begin -->###ADDRESS###<!-- ###HAS_ADDRESS### end -->
+</div>
+
+<!-- ###HAS_YEAR### begin -->
+<div class="tx_sevenpack-block">
+<!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
+###YEAR###.
+</div>
+<!-- ###HAS_YEAR### end -->
+
+<!-- ###HAS_AFFILIATION### begin -->
+<div class="tx_sevenpack-block">###AFFILIATION###</div>
+<!-- ###HAS_AFFILIATION### end -->
+
+<!-- ###MANUSCRIPT_DATA### begin -->
+
