--- a/res/templates/list_items.html
+++ b/res/templates/list_items.html
@@ -98,7 +98,7 @@
 <!-- ###HAS_SCHOOL### begin -->###SCHOOL### <!-- ###HAS_SCHOOL### end -->
 <!-- ###HAS_EDITION### begin -->###EDITION### ###LABEL_EDITION###, <!-- ###HAS_EDITION### end -->
 <!-- ###HAS_HOWPUBLISHED### begin -->###HOWPUBLISHED###, <!-- ###HAS_HOWPUBLISHED### end -->
-<!-- ###HAS_YEAR### begin -->###YEAR###. <!-- ###HAS_YEAR### end -->
+<!-- ###HAS_YEAR### begin -->###YEAR### <!-- ###HAS_YEAR### end -->
 <!-- ###HAS_ISBN### begin -->###ISBN### <!-- ###HAS_ISBN### end -->
 <!-- ###HAS_AFFILIATION### begin -->###AFFILIATION###<!-- ###HAS_AFFILIATION### end -->
 <!-- ###HAS_EXTERN### begin -->###EXTERN###<!-- ###HAS_EXTERN### end -->
@@ -119,7 +119,7 @@
 <!-- ###HAS_YEAR### begin -->
 <div class="tx_sevenpack-block">
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-###YEAR###.
+###YEAR###
 </div>
 <!-- ###HAS_YEAR### end -->
 
@@ -153,7 +153,7 @@
 <!-- ###HAS_YEAR### begin -->
 <div class="tx_sevenpack-block">
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-###YEAR###.
+###YEAR###
 </div>
 <!-- ###HAS_YEAR### end -->
 
@@ -172,7 +172,7 @@
 </div>
 
 <div class="tx_sevenpack-block">
-<!-- ###HAS_CHAPTER### begin --><span class="tx_sevenpack-chapter">###CHAPTER###</span>, <!-- ###HAS_CHAPTER### end -->
+<!-- ###HAS_CHAPTER### begin -->###LABEL_CHAPTER### <span class="tx_sevenpack-chapter">###CHAPTER###</span>, <!-- ###HAS_CHAPTER### end -->
 <!-- ###HAS_PAGES### begin -->###LABEL_PAGE### ###PAGES###.<!-- ###HAS_PAGES### end -->
 </div>
 
@@ -194,7 +194,7 @@
 <!-- ###HAS_YEAR### begin -->
 <div class="tx_sevenpack-block">
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-###YEAR###.
+###YEAR###
 </div>
 <!-- ###HAS_YEAR### end -->
 
@@ -224,7 +224,7 @@
 <!-- ###HAS_YEAR### begin -->
 <div class="tx_sevenpack-block">
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-###YEAR###.
+###YEAR###
 </div>
 <!-- ###HAS_YEAR### end -->
 
@@ -267,7 +267,7 @@
 <!-- ###HAS_YEAR### begin -->
 <div class="tx_sevenpack-block">
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-###YEAR###.
+###YEAR###
 </div>
 <!-- ###HAS_YEAR### end -->
 
@@ -292,7 +292,7 @@
 </div>
 
 <div class="tx_sevenpack-block">
-<!-- ###HAS_CHAPTER### begin --><span class="tx_sevenpack-chapter">###CHAPTER###</span>,<!-- ###HAS_CHAPTER### end -->
+<!-- ###HAS_CHAPTER### begin -->###LABEL_CHAPTER### <span class="tx_sevenpack-chapter">###CHAPTER###</span>,<!-- ###HAS_CHAPTER### end -->
 <!-- ###HAS_PAGES### begin -->###LABEL_PAGE### ###PAGES###.<!-- ###HAS_PAGES### end -->
 </div>
 
@@ -317,7 +317,7 @@
 <!-- ###HAS_YEAR### begin -->
 <div class="tx_sevenpack-block">
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-###YEAR###.
+###YEAR###
 </div>
 <!-- ###HAS_YEAR### end -->
 
@@ -360,7 +360,7 @@
 <!-- ###HAS_YEAR### begin -->
 <div class="tx_sevenpack-block">
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-###YEAR###.
+###YEAR###
 </div>
 <!-- ###HAS_YEAR### end -->
 
@@ -401,7 +401,7 @@
 <!-- ###HAS_YEAR### begin -->
 <div class="tx_sevenpack-block">
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-###YEAR###.
+###YEAR###
 </div>
 <!-- ###HAS_YEAR### end -->
 
@@ -431,7 +431,7 @@
 <!-- ###HAS_YEAR### begin -->
 <div class="tx_sevenpack-block">
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-###YEAR###.
+###YEAR###
 </div>
 <!-- ###HAS_YEAR### end -->
 
@@ -458,7 +458,7 @@
 <!-- ###HAS_YEAR### begin -->
 <div class="tx_sevenpack-block">
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-###YEAR###.
+###YEAR###
 </div>
 <!-- ###HAS_YEAR### end -->
 
@@ -481,7 +481,7 @@
 <!-- ###HAS_YEAR### begin -->
 <div class="tx_sevenpack-block">
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-###YEAR###.
+###YEAR###
 </div>
 <!-- ###HAS_YEAR### end -->
 
@@ -505,7 +505,7 @@
 <!-- ###HAS_YEAR### begin -->
 <div class="tx_sevenpack-block">
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-###YEAR###.
+###YEAR###
 </div>
 <!-- ###HAS_YEAR### end -->
 
@@ -522,7 +522,7 @@
 <!-- ###HAS_YEAR### begin -->
 <div class="tx_sevenpack-block">
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-###YEAR###.
+###YEAR###
 </div>
 <!-- ###HAS_YEAR### end -->
 
@@ -544,7 +544,7 @@
 <!-- ###HAS_YEAR### begin -->
 <div class="tx_sevenpack-block">
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-###YEAR###.
+###YEAR###
 </div>
 <!-- ###HAS_YEAR### end -->
 
@@ -584,7 +584,7 @@
 <!-- ###HAS_YEAR### begin -->
 <div class="tx_sevenpack-block">
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-###YEAR###.
+###YEAR###
 </div>
 <!-- ###HAS_YEAR### end -->
 
@@ -615,7 +615,7 @@
 <!-- ###HAS_YEAR### begin -->
 <div class="tx_sevenpack-block">
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-###YEAR###.
+###YEAR###
 </div>
 <!-- ###HAS_YEAR### end -->
 
@@ -650,7 +650,7 @@
 <!-- ###HAS_YEAR### begin -->
 <div class="tx_sevenpack-block">
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-###YEAR###.
+###YEAR###
 </div>
 <!-- ###HAS_YEAR### end -->
 
@@ -689,7 +689,7 @@
 <!-- ###HAS_YEAR### begin -->
 <div class="tx_sevenpack-block">
 <!-- ###HAS_MONTH### begin -->###MONTH###<!-- ###HAS_MONTH### end -->
-###YEAR###.
+###YEAR###
 </div>
 <!-- ###HAS_YEAR### end -->
 
