--- a/res/templates/list_items.html
+++ b/res/templates/list_items.html
@@ -491,11 +491,17 @@
 
 <h2>Techreport</h2>
 <!-- ###TECHREPORT_DATA### begin -->
-<div class="tx_sevenpack-block">
-<!-- ###HAS_TYPE### begin -->###TYPE###<!-- ###HAS_TYPE### end -->
-<!-- ###HAS_NUMBER### begin -->###NUMBER###, <!-- ###HAS_NUMBER### end -->
-<!-- ###HAS_AFFILIATION### begin -->###AFFILIATION###<!-- ###HAS_AFFILIATION### end -->
-</div>
+<!-- ###HAS_TYPE### begin -->
+<div class="tx_sevenpack-block">###TYPE###</div>
+<!-- ###HAS_TYPE### end -->
+
+<!-- ###HAS_NUMBER### begin -->
+<div class="tx_sevenpack-block">###NUMBER###</div>
+<!-- ###HAS_NUMBER### end -->
+
+<!-- ###HAS_AFFILIATION### begin -->
+<div class="tx_sevenpack-block">###AFFILIATION###</div>
+<!-- ###HAS_AFFILIATION### end -->
 
 <div class="tx_sevenpack-block">
 <!-- ###HAS_INSTITUTION### begin -->###INSTITUTION###, <!-- ###HAS_INSTITUTION### end --><!-- 
@@ -634,6 +640,14 @@
 <div class="tx_sevenpack-block">###TYPE###</div>
 <!-- ###HAS_TYPE### end -->
 
+<!-- ###HAS_NUMBER### begin -->
+<div class="tx_sevenpack-block">###NUMBER###</div>
+<!-- ###HAS_NUMBER### end -->
+
+<!-- ###HAS_AFFILIATION### begin -->
+<div class="tx_sevenpack-block">###AFFILIATION###</div>
+<!-- ###HAS_AFFILIATION### end -->
+
 <!-- ###HAS_INSTITUTION### begin -->
 <div class="tx_sevenpack-block">###INSTITUTION###</div>
 <!-- ###HAS_INSTITUTION### end -->
@@ -653,10 +667,6 @@
 ###YEAR###
 </div>
 <!-- ###HAS_YEAR### end -->
-
-<!-- ###HAS_AFFILIATION### begin -->
-<div class="tx_sevenpack-block">###AFFILIATION###</div>
-<!-- ###HAS_AFFILIATION### end -->
 
 <!-- ###REPORT_DATA### begin -->
 
