New field number2

--- a/res/templates/list_items.html
+++ b/res/templates/list_items.html
@@ -496,8 +496,12 @@
 <!-- ###HAS_TYPE### end -->
 
 <!-- ###HAS_NUMBER### begin -->
-<div class="tx_sevenpack-block">###NUMBER###</div>
+<div class="tx_sevenpack-block">###LABEL_DOC_NUMBER###: ###NUMBER###</div>
 <!-- ###HAS_NUMBER### end -->
+
+<!-- ###HAS_NUMBER2### begin -->
+<div class="tx_sevenpack-block">###LABEL_REPORT_NUMBER###: ###NUMBER2###</div>
+<!-- ###HAS_NUMBER2### end -->
 
 <!-- ###HAS_AFFILIATION### begin -->
 <div class="tx_sevenpack-block">###AFFILIATION###</div>
@@ -641,8 +645,12 @@
 <!-- ###HAS_TYPE### end -->
 
 <!-- ###HAS_NUMBER### begin -->
-<div class="tx_sevenpack-block">###NUMBER###</div>
+<div class="tx_sevenpack-block">###LABEL_DOC_NUMBER###: ###NUMBER###</div>
 <!-- ###HAS_NUMBER### end -->
+
+<!-- ###HAS_NUMBER2### begin -->
+<div class="tx_sevenpack-block">###LABEL_REPORT_NUMBER###: ###NUMBER2###</div>
+<!-- ###HAS_NUMBER2### end -->
 
 <!-- ###HAS_AFFILIATION### begin -->
 <div class="tx_sevenpack-block">###AFFILIATION###</div>
